# Seminar_Agent

./: README.md  env.template  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  analysis_agent.py  coordinator.py  web_research_agent.py  writer_agent.py
config/: agent_config.yaml  report_rules.yaml
tools/: __init__.py  content_parser.py  web_search_tools.py
